<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string
		name="app_name"
	>SensorRecordFromDevice</string>
	<string
		name="record_steps"
	>-1. Go to the Scenario Simulator tab in java desktop
		application.\n0. Fill the IP address of the server\n1. Select sensors
		to record\n2. Press Record\n3. From now, all steps are recording (ex.
		go to your game and play)\n 4. Press Stop (from phone activity or from
		java application)</string>
	<string
		name="record"
	>Record</string>
	<string
		name="stop"
	>Stop</string>
	<string
		name="ip"
	>IP</string>
	<string
		name="set_ip"
	>Please set the server IP first!</string>
	<string
		name="sensors_recording_started"
	>Sensors recording started!</string>
	<string
		name="sensors_recording_stopped"
	>Sensors recording stopped!</string>
	<string
		name="sensors_record_label"
	>Sensors Record</string>
	<string name="supported_phones">HTC - Nexus One,Samsung - Nexus S,Acer - A500,Motorola - Xoom,Motorola - Motorola Electrify</string>
	<string name="send_email_button">Send us your sensors configuration.</string>
</resources>
