<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
>
	<Button
		android:text="@string/send_email_button"
		android:id="@+id/send_email"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
	></Button>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/record_steps" />
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<TextView
			android:layout_weight="1"
			android:text="@string/ip"
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:gravity="center_horizontal"
		></TextView>
		<EditText
			android:text="192.168.2.103"
			android:id="@+id/ip_txt"
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:layout_weight="4" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/record"
			android:id="@+id/record_btn"
		></Button>
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/stop"
			android:id="@+id/stop_btn"
		></Button>
	</LinearLayout>
	<ListView
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/sensors_list"
		android:fastScrollEnabled="true"
	></ListView>
</LinearLayout>